--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,6 +13,7 @@ kotlinxSerialization = "1.6.3"
 kotlinParcelize = "1.8.10"
 ksp = "2.0.20-1.0.24"
 protoliteWellKnownTypes = "18.0.1"
+googleAds = "23.0.0"
 
 # Agregados
 roomKtx = "2.6.1"
@@ -46,6 +47,7 @@ androidx-material3 = { group = "androidx.compose.material3", name = "material3" 
 androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "navigationCompose" }
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinxSerialization" }
 protolite-well-known-types = { group = "com.google.firebase", name = "protolite-well-known-types", version.ref = "protoliteWellKnownTypes" }
+google-ads = { group = "com.google.android.gms", name = "play-services-ads", version.ref = "googleAds" }
 
 # Nuevos
 androidx-room-ktx = { module = "androidx.room:room-ktx", version.ref = "roomKtx" }
